# foodtruck-cli

./: .gitignore  README.md  install.py  install.sh  pyproject.toml  test_foodtruck.py
completions/: README.md  _foodtruck  foodtruck.bash  foodtruck.ps1
foodtruck_cli/: __init__.py  console.py  main.py
foodtruck_cli/commands/: __init__.py  api.py  check.py  complete.yaml  completion.py  setup.py
foodtruck_cli/commands/api/: __init__.py  api.py  app.py  command.py  models.py
foodtruck_cli/commands/check/: __init__.py  app.py  check.py  command.py  models.py
foodtruck_cli/commands/completion/: __init__.py  app.py  command.py  complete.yaml  completion.py  models.py
foodtruck_cli/commands/setup/: __init__.py  app.py  command.py  models.py  setup.py
foodtruck_cli/utils/: console.py  fs.py  git.py  run_command.py
tests/: README.md  __init__.py  conftest.py  test_check.py  test_check_integration.py  test_completion.py  test_foodtruck.py  test_install.py  test_windows_simple.py
